--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+ <link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
+
 </head>
 <body>
-  Instagram
+  <div class="page">
 
-  Capture and Share the World's Moments
+  <div class="topblue">
+  </div>
+  <div class="content">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img src="images/frame.png" alt="Frame">
+    <img src="images/brand.png" alt="Instagram">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class="main">
+      <h2>Capture and Share<br>the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+              <a href="#">
+                <img src="images/badge-iphone.png" alt="Download on the App Store.">
+              </a>
+              <a href="#">
+                <img src="images/badge-android.png" alt="Get it on Google Play.">
+              </a>
+
+      Download on the App Store
+      Get it on Google Play
+
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+
+      &copy; 2014 Instagram
+    </p>
+  </div>
+
+
+<section class="iphone">
+<img src="images/phones.png" alt="iphone">
+</section>
+
+</div>
+</div>
 </body>
 </html>
